# UIU-Installment-Calculator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  main.cpp  resources.qrc
